--- a/akka/ddm-lmp/pom.xml
+++ b/akka/ddm-lmp/pom.xml
@@ -11,7 +11,7 @@
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<scala.version>2.12</scala.version>
-		<akka.version>2.5.22</akka.version>
+		<akka.version>2.5.23</akka.version>
 		<chill-akka.version>0.9.3</chill-akka.version>
 		<logback.version>1.2.3</logback.version>
 		<jcommander.version>1.72</jcommander.version>
@@ -27,6 +27,12 @@
 			<groupId>com.typesafe.akka</groupId>
 			<artifactId>akka-actor_${scala.version}</artifactId>
 			<version>${akka.version}</version>
+		</dependency>
+
+		<dependency>
+			<groupId>com.typesafe.akka</groupId>
+			<artifactId>akka-http_${scala.version}</artifactId>
+			<version>10.1.10</version>
 		</dependency>
 
 		<dependency>
